--- a/Class 5/sq1-store/index.html
+++ b/Class 5/sq1-store/index.html
@@ -13,7 +13,7 @@
       class="bg-white/75 backdrop-blur-lg w-full p-4 box-border flex justify-between items-center border-b border-gray sticky top-0 z-10"
     >
       <img
-        src="../assets/SQ1 Academy.svg"
+        src="./assets/SQ1 Academy.svg"
         alt="SQ1 Academy Store"
         class="w-32 h-auto"
       />
